Added meta tag for CSP

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Did I Hike That?" />
+
+    <% if (process.env.NODE_ENV !== 'production') { %>
+      <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; connect-src 'self' localhost:*; img-src 'self' localhost:*; style-src 'self' 'unsafe-inline';base-uri 'self';form-action 'self'">
+    <% } %>
+
+    <% if (process.env.NODE_ENV === 'production') { %>
+      <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; connect-src 'self' https://diht-api.cmtybur.com; img-src 'self' https://diht-api.cmtybur.com; style-src 'self' 'unsafe-inline';base-uri 'self';form-action 'self'">
+    <% } %>
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Did I Hike That?</title>
   </head>
